// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`audio peaks utilities > getAudioBufferPeaks: can parse properly 1`] = `
[
  0.6535097529855831,
  0.6587443002271053,
  0.3584391705130495,
  0.511654818214103,
  0.38686114195895066,
  0.4148397068564572,
  0.4506172437390386,
  0.36060813570258143,
  0.11728988448919904,
  0.009706296479039355,
  0.2040820189505918,
  0.3131655320477457,
  0.5629843472173648,
  0.3167452345034327,
  0.17985815984530973,
  0.24244726659593097,
  0.20899386497473593,
  0.38814979933026245,
  0.27737783645264824,
  0.25266324148118324,
  0.3823469458319626,
  0.1741612578114313,
  0.5323684239619767,
  0.3971884696154839,
  0.061817940355553394,
  0.15963138707687224,
  0.26955226685613803,
  1,
  0.21218772808293798,
  0.3133707650127633,
  0.36925933463322896,
  0.30117738495488366,
  0.3244987106451748,
  0.31597483071444316,
  0.6003975214939695,
  0.06326287220598549,
  0.00924184124039111,
  0.00035440080292977757,
  0.5677177976110978,
  0.39284115993245416,
  0.340978962186318,
  0.36261468715898265,
  0.4525579420655786,
  0.3095571235477397,
  0.317268828064921,
  0.2412689335561778,
  0.35692363868650073,
  0.3648195058446776,
  0.24784004813023636,
  0.009233818818755953,
  0.0003236657105493426,
  0.00032443056170015564,
  0.48990904474937574,
  0.4837622527907541,
  0.15986196302921127,
  0.40176340533995214,
  0.3909409896970203,
  0.29449409729310994,
  0.45247288269374447,
  0.20327005079742022,
  0.5569852401339714,
  0.21435205390496273,
  0.24946772712443055,
  0.10511361828944096,
  0.5530426750430902,
  0.2241639682101247,
  0.5300783608195181,
  0.49000612355422124,
  0.19740307432689158,
  0.15453845358279483,
  0.43400500590146823,
  0.2196380371506487,
  0.01640113445414164,
  0.009661739245756184,
  0.5136037163950732,
  0.6778454756833016,
  0.4056786293665202,
  0.2671855606305471,
  0.13838550973643796,
  0.2747916599679848,
  0.435255053965054,
  0.3972209410103305,
  0.2660562596887409,
  0.27085596252691213,
  0.23586208836670705,
  0.21231809744278418,
  0.053008316006870365,
  0.2905485860431871,
  0.7610784941305088,
  0.5626606669559452,
  0.5834213576228702,
  0.5562215790490912,
  0.1977238179864703,
  0.368243572425205,
  0.22565281735193068,
  0.16279286843364071,
  0.3157572652375688,
  0.11149981276485757,
  0.16629472615773883,
  0.0004631769945363229,
]
`;

exports[`audio peaks utilities > getAudioInfo: can parse properly 1`] = `
{
  "duration": 23902.020833333336,
  "peaks": [
    0.6535097529855831,
    0.6587443002271053,
    0.3584391705130495,
    0.511654818214103,
    0.38686114195895066,
    0.4148397068564572,
    0.4506172437390386,
    0.36060813570258143,
    0.11728988448919904,
    0.009706296479039355,
    0.2040820189505918,
    0.3131655320477457,
    0.5629843472173648,
    0.3167452345034327,
    0.17985815984530973,
    0.24244726659593097,
    0.20899386497473593,
    0.38814979933026245,
    0.27737783645264824,
    0.25266324148118324,
    0.3823469458319626,
    0.1741612578114313,
    0.5323684239619767,
    0.3971884696154839,
    0.061817940355553394,
    0.15963138707687224,
    0.26955226685613803,
    1,
    0.21218772808293798,
    0.3133707650127633,
    0.36925933463322896,
    0.30117738495488366,
    0.3244987106451748,
    0.31597483071444316,
    0.6003975214939695,
    0.06326287220598549,
    0.00924184124039111,
    0.00035440080292977757,
    0.5677177976110978,
    0.39284115993245416,
    0.340978962186318,
    0.36261468715898265,
    0.4525579420655786,
    0.3095571235477397,
    0.317268828064921,
    0.2412689335561778,
    0.35692363868650073,
    0.3648195058446776,
    0.24784004813023636,
    0.009233818818755953,
    0.0003236657105493426,
    0.00032443056170015564,
    0.48990904474937574,
    0.4837622527907541,
    0.15986196302921127,
    0.40176340533995214,
    0.3909409896970203,
    0.29449409729310994,
    0.45247288269374447,
    0.20327005079742022,
    0.5569852401339714,
    0.21435205390496273,
    0.24946772712443055,
    0.10511361828944096,
    0.5530426750430902,
    0.2241639682101247,
    0.5300783608195181,
    0.49000612355422124,
    0.19740307432689158,
    0.15453845358279483,
    0.43400500590146823,
    0.2196380371506487,
    0.01640113445414164,
    0.009661739245756184,
    0.5136037163950732,
    0.6778454756833016,
    0.4056786293665202,
    0.2671855606305471,
    0.13838550973643796,
    0.2747916599679848,
    0.435255053965054,
    0.3972209410103305,
    0.2660562596887409,
    0.27085596252691213,
    0.23586208836670705,
    0.21231809744278418,
    0.053008316006870365,
    0.2905485860431871,
    0.7610784941305088,
    0.5626606669559452,
    0.5834213576228702,
    0.5562215790490912,
    0.1977238179864703,
    0.368243572425205,
    0.22565281735193068,
    0.16279286843364071,
    0.3157572652375688,
    0.11149981276485757,
    0.16629472615773883,
    0.0004631769945363229,
  ],
}
`;
